--- a/references.bib
+++ b/references.bib
@@ -44,3 +44,17 @@
   year={2009},
   publisher={MIT Press}
 }
+
+@article{Barto1983,
+	doi = {10.1109/tsmc.1983.6313077},
+	url = {https://doi.org/10.1109/tsmc.1983.6313077},
+	year = {1983},
+	month = sep,
+	publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+	volume = {{SMC}-13},
+	number = {5},
+	pages = {834--846},
+	author = {Andrew G. Barto and Richard S. Sutton and Charles W. Anderson},
+	title = {Neuronlike adaptive elements that can solve difficult learning control problems},
+	journal = {{IEEE} Transactions on Systems,  Man,  and Cybernetics}
+}
