--- a/preamble.tex
+++ b/preamble.tex
@@ -14,6 +14,7 @@
 \usepackage{comment}
 \usepackage{mathtools}
 \usepackage{braket}
+\usepackage{multirow}
 
 % Custom environment
 \newtheorem{problem}{Problem}
