--- a/theory.tex
+++ b/theory.tex
@@ -16,9 +16,9 @@ Next, we lift the given specification $(\set{\init^i}_{i\in [1;N]}, \set{\goal^i
 			&\obs \coloneqq\\ 
 				&\Set{ x\in X | 
 					\begin{array}{c}
-						\exists i\in [1;N]\;.\; d^{n_i}(\proj^i(x),\obs^i) \leq \delta_{\obs,i}\\
+						\exists i\in [1;N]\;.\; d^{p}(h^i(\proj^i(x)),\obs) \leq \delta\\
 						\wedge\\
-						 \exists (i,j)\in [1;N]\times [1;N]\;.\; d^{p}\left(h^i(\proj^i(x)),h^j(\proj^j(x))\right)\leq\delta_{\col}
+						 \exists (i,j)\in [1;N]\times [1;N]\;.\; d^{p}\left(h^i(\proj^i(x)),h^j(\proj^j(x))\right)\leq\delta
 					\end{array}}.
 		\end{align}
 \end{itemize}
