started a bullet list of related works

--- a/references.bib
+++ b/references.bib
@@ -5,44 +5,11 @@
   publisher={MIT press}
 }
 
-@book{choset2005principles,
-  title={Principles of robot motion: theory, algorithms, and implementation},
-  author={Choset, Howie M and Hutchinson, Seth and Lynch, Kevin M and Kantor, George and Burgard, Wolfram and Kavraki, Lydia E and Thrun, Sebastian},
-  year={2005},
-  publisher={MIT press}
-}
-
-@inproceedings{fisac2015reach,
-  title={Reach-avoid problems with time-varying dynamics, targets and constraints},
-  author={Fisac, Jaime F and Chen, Mo and Tomlin, Claire J and Sastry, S Shankar},
-  booktitle={Proceedings of the 18th international conference on hybrid systems: computation and control},
-  pages={11--20},
-  year={2015}
-}
-
-@inproceedings{howell2019altro,
-  title={ALTRO: A fast solver for constrained trajectory optimization},
-  author={Howell, Taylor A and Jackson, Brian E and Manchester, Zachary},
-  booktitle={2019 IEEE International Conference on Intelligent Robots and Systems, IEEE},
-  year={2019}
-}
-
-@article{reissig2016feedback,
-  title={Feedback refinement relations for the synthesis of symbolic controllers},
-  author={Reissig, Gunther and Weber, Alexander and Rungger, Matthias},
-  journal={IEEE Transactions on Automatic Control},
-  volume={62},
-  number={4},
-  pages={1781--1796},
-  year={2016},
-  publisher={IEEE}
-}
-
-@article{tedrake2009lqr,
-  title={LQR-Trees: Feedback motion planning on sparse randomized trees},
-  author={Tedrake, Russ},
-  year={2009},
-  publisher={MIT Press}
+@inproceedings{bansal2017safe,
+  title={Safe sequential path planning of multi-vehicle systems under presence of disturbances and imperfect information},
+  author={Bansal, Somil and Chen, Mo and Fisac, Jaime F and Tomlin, Claire J},
+  booktitle={American Control Conference},
+  year={2017}
 }
 
 @article{Barto1983,
@@ -57,4 +24,160 @@
 	author = {Andrew G. Barto and Richard S. Sutton and Charles W. Anderson},
 	title = {Neuronlike adaptive elements that can solve difficult learning control problems},
 	journal = {{IEEE} Transactions on Systems,  Man,  and Cybernetics}
+}
+
+@book{choset2005principles,
+  title={Principles of robot motion: theory, algorithms, and implementation},
+  author={Choset, Howie M and Hutchinson, Seth and Lynch, Kevin M and Kantor, George and Burgard, Wolfram and Kavraki, Lydia E and Thrun, Sebastian},
+  year={2005},
+  publisher={MIT press}
+}
+
+@inproceedings{fan2020fast,
+  title={Fast and Guaranteed Safe Controller Synthesis for Nonlinear Vehicle Models},
+  author={Fan, Chuchu and Miller, Kristina and Mitra, Sayan},
+  booktitle={International Conference on Computer Aided Verification},
+  pages={629--652},
+  year={2020},
+  organization={Springer}
+}
+
+@inproceedings{fan2018controller,
+  title={Controller synthesis made real: reach-avoid specifications and linear dynamics},
+  author={Fan, Chuchu and Mathur, Umang and Mitra, Sayan and Viswanathan, Mahesh},
+  booktitle={International Conference on Computer Aided Verification},
+  pages={347--366},
+  year={2018},
+  organization={Springer}
+}
+
+@inproceedings{fisac2015reach,
+  title={Reach-avoid problems with time-varying dynamics, targets and constraints},
+  author={Fisac, Jaime F and Chen, Mo and Tomlin, Claire J and Sastry, S Shankar},
+  booktitle={Proceedings of the 18th international conference on hybrid systems: computation and control},
+  pages={11--20},
+  year={2015}
+}
+
+@inproceedings{herbert2017fastrack,
+  title={FaSTrack: A modular framework for fast and guaranteed safe motion planning},
+  author={Herbert, Sylvia L and Chen, Mo and Han, SooJean and Bansal, Somil and Fisac, Jaime F and Tomlin, Claire J},
+  booktitle={2017 IEEE 56th Annual Conference on Decision and Control (CDC)},
+  pages={1517--1522},
+  year={2017},
+  organization={IEEE}
+}
+
+@inproceedings{howell2019altro,
+  title={ALTRO: A fast solver for constrained trajectory optimization},
+  author={Howell, Taylor A and Jackson, Brian E and Manchester, Zachary},
+  booktitle={2019 IEEE International Conference on Intelligent Robots and Systems, IEEE},
+  year={2019}
+}
+
+@article{DBLP:journals/tac/MeyerD19,
+  author    = {Pierre{-}Jean Meyer and
+               Dimos V. Dimarogonas},
+  title     = {Hierarchical Decomposition of {LTL} Synthesis Problem for Nonlinear
+               Control Systems},
+  journal   = {{IEEE} Trans. Autom. Control.},
+  volume    = {64},
+  number    = {11},
+  pages     = {4676--4683},
+  year      = {2019},
+  url       = {https://doi.org/10.1109/TAC.2019.2902643},
+  doi       = {10.1109/TAC.2019.2902643},
+  timestamp = {Wed, 20 May 2020 21:30:19 +0200},
+  biburl    = {https://dblp.org/rec/journals/tac/MeyerD19.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{DBLP:journals/corr/abs-1911-09773,
+  author    = {Pierre{-}Jean Meyer and
+               He Yin and
+               Astrid H. Brodtkorb and
+               Murat Arcak and
+               Asgeir J. S{\o}rensen},
+  title     = {Continuous and discrete abstractions for planning, applied to ship
+               docking},
+  journal   = {CoRR},
+  volume    = {abs/1911.09773},
+  year      = {2019},
+  url       = {http://arxiv.org/abs/1911.09773},
+  archivePrefix = {arXiv},
+  eprint    = {1911.09773},
+  timestamp = {Tue, 03 Dec 2019 14:15:54 +0100},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-1911-09773.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{reissig2016feedback,
+  title={Feedback refinement relations for the synthesis of symbolic controllers},
+  author={Reissig, Gunther and Weber, Alexander and Rungger, Matthias},
+  journal={IEEE Transactions on Automatic Control},
+  volume={62},
+  number={4},
+  pages={1781--1796},
+  year={2016},
+  publisher={IEEE}
+}
+
+@article{schmidt2008nonblocking,
+  title={Nonblocking hierarchical control of decentralized discrete event systems},
+  author={Schmidt, Klaus and Moor, Thomas and Perk, Sebastian},
+  journal={IEEE Transactions on Automatic Control},
+  volume={53},
+  number={10},
+  pages={2252--2265},
+  year={2008},
+  publisher={IEEE}
+}
+
+@inproceedings{singh2018robust,
+  title={Robust tracking with model mismatch for fast and safe planning: an SOS optimization approach},
+  author={Singh, Sumeet and Chen, Mo and Herbert, Sylvia L and Tomlin, Claire J and Pavone, Marco},
+  booktitle={International Workshop on the Algorithmic Foundations of Robotics},
+  pages={545--564},
+  year={2018},
+  organization={Springer}
+}
+
+@article{tedrake2010lqr,
+  title={LQR-trees: Feedback motion planning via sums-of-squares verification},
+  author={Tedrake, Russ and Manchester, Ian R and Tobenkin, Mark and Roberts, John W},
+  journal={The International Journal of Robotics Research},
+  volume={29},
+  number={8},
+  pages={1038--1052},
+  year={2010},
+  publisher={SAGE Publications Sage UK: London, England}
+}
+
+@article{tedrake2009lqr,
+  title={LQR-Trees: Feedback motion planning on sparse randomized trees},
+  author={Tedrake, Russ},
+  year={2009},
+  publisher={MIT Press}
+}
+
+@article{wong1996hierarchical,
+  title={Hierarchical control of discrete-event systems},
+  author={Wong, Kai C and Wonham, Walter Murray},
+  journal={Discrete Event Dynamic Systems},
+  volume={6},
+  number={3},
+  pages={241--273},
+  year={1996},
+  publisher={Springer}
+}
+
+@article{wongpiromsarn2012receding,
+  title={Receding horizon temporal logic planning},
+  author={Wongpiromsarn, Tichakorn and Topcu, Ufuk and Murray, Richard M},
+  journal={IEEE Transactions on Automatic Control},
+  volume={57},
+  number={11},
+  pages={2817--2830},
+  year={2012},
+  publisher={IEEE}
 }
