adding papers to related works

--- a/references.bib
+++ b/references.bib
@@ -26,6 +26,20 @@
 	journal = {{IEEE} Transactions on Systems,  Man,  and Cybernetics}
 }
 
+@inproceedings{Chen2018cbf,
+	author    = {Ji Chen and
+	Salar Moarref and
+	Hadas Kress{-}Gazit},
+	title     = {Verifiable Control of Robotic Swarm from High-level Specifications},
+	booktitle = {Proceedings of the 17th International Conference on Autonomous Agents
+	and MultiAgent Systems, {AAMAS} 2018, Stockholm, Sweden, July 10-15,
+	2018},
+	pages     = {568--576},
+	publisher = {International Foundation for Autonomous Agents and Multiagent Systems
+	Richland, SC, {USA} / {ACM}},
+	year      = {2018}
+}
+
 @book{choset2005principles,
   title={Principles of robot motion: theory, algorithms, and implementation},
   author={Choset, Howie M and Hutchinson, Seth and Lynch, Kevin M and Kantor, George and Burgard, Wolfram and Kavraki, Lydia E and Thrun, Sebastian},
@@ -122,6 +136,15 @@
   publisher={IEEE}
 }
 
+@INPROCEEDINGS{Shahin2017cltl,
+	author={Y. E. {Sahin} and P. {Nilsson} and N. {Ozay}},
+	booktitle={2017 ACM/IEEE 8th International Conference on Cyber-Physical Systems (ICCPS)}, 
+	title={Provably-Correct Coordination of Large Collections of Agents with Counting Temporal Logic Constraints}, 
+	year={2017},
+	volume={},
+	number={},
+	pages={249-258},}
+
 @article{schmidt2008nonblocking,
   title={Nonblocking hierarchical control of decentralized discrete event systems},
   author={Schmidt, Klaus and Moor, Thomas and Perk, Sebastian},
@@ -158,6 +181,15 @@
   author={Tedrake, Russ},
   year={2009},
   publisher={MIT Press}
+}
+
+@inproceedings{Yang2017milp,
+	year = {2017},
+	month = dec,
+	publisher = {{IEEE}},
+	author = {Liren Yang and Necmiye Ozay},
+	title = {Provably-correct fault tolerant control with delayed information},
+	booktitle = {2017 {IEEE} 56th Annual Conference on Decision and Control ({CDC})}
 }
 
 @article{wong1996hierarchical,
