--- a/related_work.tex
+++ b/related_work.tex
@@ -3,7 +3,7 @@
 \KM{The plan is to collect all the papers first in the following list. After that, I will make a story out of them.}
 Here are the papers that we know of:
 \begin{enumerate}
-	\item FastTrack: Guaranteed tracking of nonlinear trajectories for nonlinear systems under disturbances \cite{herbert2017fastrack}.
+	\item FastTrack: Guaranteed tracking of nonlinear trajectories for nonlinear systems under disturbances \cite{herbert2017fastrack}. \MS{They only account for the error between the planning and tracking models and not for additive disturbance applied to the tracking model. They also rely on possibility of relating the two afformentioned models by a linear mapping (which is not the case for the general class of systems). Finally, while their method scales up better than (pure) SCOTS, it does not scale up to dimensions above ten.}
 	\item Safe control for multi-vehicle system under presence of disturbances \cite{bansal2017safe}. In contrast to our method, they assume a fixed priority order of the vehicles: The higher priority vehicles make independent plans, which are treated as (time-varying) obstacles for the lower priority vehicles. 
 	\new{One way our method is probably more powerful is if we consider controller synthesis for mechanically coupled systems with joint goal, or even formation control problem for mechanically decoupled systems. For these class of problems, I don't think their method will directly apply, whereas ours should work fine.}
 	\item Using the tracking error in the planning phase to make sure that the controller will be safe \cite{fan2020fast}. Relies on an expert user to already provide the low-level tracking controller, whereas we synthesize the tracking controller. So they address the inverse problem in some sense.
@@ -11,4 +11,8 @@ Here are the papers that we know of:
 	\item Sum-of-squares based tracking methods \cite{tedrake2010lqr, singh2018robust}. Do not consider external disturbances.
 	\item Other hierarchical methods using planning+tracking like approach for formal methods-based synthesis for single systems \cite{wongpiromsarn2012receding, DBLP:journals/tac/MeyerD19, DBLP:journals/corr/abs-1911-09773}.
 	\item Hierarchical control for interconnected discrete event systems \cite{wong1996hierarchical,schmidt2008nonblocking}.
+	\item A robust scheme for controlling linear dynamical systems with additive bounded noise and (general) LTL specification \cite{Yang2017milp}. They use mixed integer linear programming (MILP) to design a nominal controller satisfying the given LTL specification in the absence of noise and then design a refulating controller to account for the noise term.
+	\item A method to control a robot swarm (modelled as planar robots with potentially different speed bounds) such that a given specification (expressable in a fragment of LTL) is satisfied \cite{Chen2018cbf}. Some extent of communication between robots is required. The collision avoidance is guaranteed via designing control barrier functions for each pair of robots. No source of disturbance is considered in the model and the proposed solution does not work for agent modeled not as planar robots.
+	\item Controlling (homogeneous) robot swarms (modelled as finite state transition systems) for satisfying specifications expressed in a temporal logic a temporal logic that for reasoning about the collective behavior of multiple agents (cLTL) \cite{Shahin2017cltl,}. Their method can potantially account for bounded noise and non-linearities, but not heterogeneity.
+	\item optimal control approaches \MS{Mehrdad might know a few of them}
 \end{enumerate}
