minor modifications to the related works sec

--- a/related_work.tex
+++ b/related_work.tex
@@ -11,8 +11,8 @@ Here are the papers that we know of:
 	\item Sum-of-squares based tracking methods \cite{tedrake2010lqr, singh2018robust}. Do not consider external disturbances.
 	\item Other hierarchical methods using planning+tracking like approach for formal methods-based synthesis for single systems \cite{wongpiromsarn2012receding, DBLP:journals/tac/MeyerD19, DBLP:journals/corr/abs-1911-09773}.
 	\item Hierarchical control for interconnected discrete event systems \cite{wong1996hierarchical,schmidt2008nonblocking}.
-	\item A robust scheme for controlling linear dynamical systems with additive bounded noise and (general) LTL specification \cite{Yang2017milp}. They use mixed integer linear programming (MILP) to design a nominal controller satisfying the given LTL specification in the absence of noise and then design a refulating controller to account for the noise term.
-	\item A method to control a robot swarm (modelled as planar robots with potentially different speed bounds) such that a given specification (expressable in a fragment of LTL) is satisfied \cite{Chen2018cbf}. Some extent of communication between robots is required. The collision avoidance is guaranteed via designing control barrier functions for each pair of robots. No source of disturbance is considered in the model and the proposed solution does not work for agent modeled not as planar robots.
-	\item Controlling (homogeneous) robot swarms (modelled as finite state transition systems) for satisfying specifications expressed in a temporal logic a temporal logic that for reasoning about the collective behavior of multiple agents (cLTL) \cite{Shahin2017cltl,}. Their method can potantially account for bounded noise and non-linearities, but not heterogeneity.
+	\item A robust scheme for controlling linear dynamical systems with additive bounded noise and (general) LTL specification \cite{Yang2017milp}. They use mixed integer linear programming (MILP) to design a nominal controller satisfying a given LTL specification in the absence of noise and then design a regulating controller to account for the noise term.
+	\item A method to control a robot swarm (modelled as planar robots with potentially different speed bounds) such that a given specification (expressable in a fragment of LTL) is satisfied \cite{Chen2018cbf}. Some extent of communication between robots is required. The collision avoidance is guaranteed via designing control barrier functions for each pair of robots. No source of disturbance is considered in the model and the proposed solution does not work for agents modeled not as planar robots.
+	\item Controlling (homogeneous) robot swarms (modelled as finite state transition systems) for satisfying specifications expressed in a temporal logic for reasoning about the collective behavior of multiple agents (cLTL) \cite{Shahin2017cltl}. Their method can potantially account for bounded noise and non-linearities, but not heterogeneity.
 	\item optimal control approaches \MS{Mehrdad might know a few of them}
 \end{enumerate}
